--- a/Projet/index.html
+++ b/Projet/index.html
@@ -11,7 +11,7 @@
         <li><a href="https://www.google.com/search?q=surprise&sxsrf=AOaemvIzcv2OvLtbogQgHLPL8M06r9VKag:1634298554207&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjiyp7GrMzzAhVDXBoKHRVHAk0Q_AUoAXoECAEQAw&biw=899&bih=632&dpr=1#imgrc=XwgZLx-VUCIIkM">Surprise</a></li>
         <li><a href="https://www.google.com/search?q=dynamite&tbm=isch&ved=2ahUKEwj0l4jIrMzzAhUO0xoKHaepBbcQ2-cCegQIABAA&oq=dynamite&gs_lcp=CgNpbWcQAzIICAAQgAQQsQMyBQgAEIAEMgUIABCABDIFCAAQgAQyBQgAEIAEMgUIABCABDIFCAAQgAQyBQgAEIAEMgUIABCABDIFCAAQgAQ6BwgjEO8DECc6BAgAEEM6CAgAELEDEIMBOgcIABCxAxBDUO7tA1jK-QNgqfoDaABwAHgAgAFiiAGoBJIBATmYAQCgAQGqAQtnd3Mtd2l6LWltZ8ABAQ&sclient=img&ei=vmppYfTAAY6ma6fTlrgL&bih=632&biw=899#imgrc=PGBWj1K5lZGsxM">Dynamite</a></li>
         <li><a href="https://www.google.com/search?q=boum&sxsrf=AOaemvLN2z673PuLKxQ9pMNsHVP2AXlSSA:1634298658371&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjGr_T3rMzzAhWhxoUKHbjWDjIQ_AUoAXoECAEQAw&biw=899&bih=632&dpr=1#imgrc=eJSqU-m5s3-JAM">Boum</a></li>
-        
+        <li><a href="/contact.html" target="blank">Contact</a></li>
     </ul>
 </body>
 </html>
