--- a/Projet/index.html
+++ b/Projet/index.html
@@ -13,7 +13,7 @@
         <li><a href="https://www.google.com/search?q=boum&sxsrf=AOaemvLN2z673PuLKxQ9pMNsHVP2AXlSSA:1634298658371&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjGr_T3rMzzAhWhxoUKHbjWDjIQ_AUoAXoECAEQAw&biw=899&bih=632&dpr=1#imgrc=eJSqU-m5s3-JAM">Boum</a></li>
         <li><a href="/contact.html" target="blank">Contact</a></li>
         <li><a href="#"></a>Retour</li>
-        <li><a href="admin-catalogue.html"></a>Catalogue</li>
+        <li><a href="/admin-catalogue.html"></a>Catalogue</li>
 
     </ul>
 </body>
