--- a/admin/admin-catalogue.html
+++ b/admin/admin-catalogue.html
@@ -10,7 +10,7 @@
     <h1>Romans</h1>
     <h1>Bandes Dessinées</h1>
     <h1>Essais</h1>
-    <a href="/index.html">Retour</a>
+    <a href="index.html">Retour</a>
     
 
 </body>
