--- a/admin/Projet/contact.html
+++ b/admin/Projet/contact.html
@@ -18,6 +18,8 @@
             <button type="submit">Envoyer</button>
         </div>
 
+        <a href="index.html">Retour à l'accueil'</a>
+
 
     </form>
 </body>
